--- a/index.Rmd
+++ b/index.Rmd
@@ -67,7 +67,7 @@ output:
 
 I'm a 3rd year PhD student in Operations Management at Harvard University (Business School and the Graduate School of Arts & Sciences). I am interested in Supply Chains, Retail Operations, and Econometrics. I am grateful to be advised by Professor [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).  
 
-Prior to Harvard, I obtained a B.A. in Economics from Simon Fraser University and an M.A. in Economics from Northwestern University. I was also a research assistant at the Finance Department at the Kellogg School of Management. 
+I'm originally from Vancouver, Canada. Prior to Harvard, I obtained a B.A. in Economics from Simon Fraser University and an M.A. in Economics from Northwestern University. 
 
 ## Some Links
 
