--- a/research.Rmd
+++ b/research.Rmd
@@ -26,9 +26,9 @@ output:
     
 # In Progress:
     
-2. [Supply Chain Disruptions: Evidence from the Bankruptcy of Hanjin Shipping (2021) ](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3293272) [**NEW**]
+2. [Supply Chain Disruptions: Evidence from the Bankruptcy of Hanjin Shipping (2021) ](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3293272)
     
-      *Reject and Resubmit* 
+      *Resubmitted* to **Manufacturing & Service Operations Management**
   
 3. Disclosure-Driven Social Engagement in Supply Chains (2021) with [Andrew Di Wu](https://sites.google.com/site/diandrewwu/).
     
