--- a/teaching.Rmd
+++ b/teaching.Rmd
@@ -25,18 +25,18 @@ knitr::include_graphics("C:/Users/caleb/Documents/GitHub/caleb-kwon.github.io/im
 ```
 
 
-### Harvard University -- Harvard Business School
+# Harvard University -- Harvard Business School
 
   - Technology and Operations Management -- Required Curriculum  Fall '19
   - Technology and Operations Management -- Required Curriculum  Fall '20 
       - [Please click here for teaching evaluations](https://calebkwon.com/rctom_reviews) 
   
 
-### Northwestern University -- Kellogg School of Management 
+# Northwestern University -- Kellogg School of Management 
  
  - Undergraduate Courses: Principles of Finance, Foreign Exchange Markets, Derivatives I, Derivatives II
  - MBA: Finance I, Finance II, Tax Strategy, Business Strategy
 
-### Simon Fraser University 
+# Simon Fraser University 
 
   - Intro Micro, Intro Macro, Intermediate Macro. 
