--- a/index.Rmd
+++ b/index.Rmd
@@ -33,7 +33,7 @@ knitr::opts_chunk$set(dpi=300,fig.width=7)
 <div style="margin-bottom:25px;">
 </div>
 
-<img src="images/caleb_hbs_new.jpg" height = "300" style ="display:block; margin-left: auto; margin-right:auto;">
+<img src="images/caleb_1.jpg" height = "300" style ="display:block; margin-left: auto; margin-right:auto;">
 
 
 
