--- a/research.Rmd
+++ b/research.Rmd
@@ -20,9 +20,9 @@ output:
 
 # Academic Papers 
 
-## 1. [Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2021)](https://www.dropbox.com/s/cxkmkbzp9b1azke/paper_draft_jun_2020.pdf?dl=0) with [Eric Mbakop](https://wpsites.ucalgary.ca/eric-mbakop/).
+## 1. [Estimation of the Number of Components in Nonparametric Multivariate Finite Mixture Models (2021)](https://www.dropbox.com/s/8sp441qoleeijtf/AOS2032.pdf?dl=0) with [Eric Mbakop](https://wpsites.ucalgary.ca/eric-mbakop/).
 
-### **Annals of Statistics** 49(4) 2178-2205 (August, 2021)
+### **Annals of Statistics** (August, 2021)
 
 ---
     
