--- a/research.Rmd
+++ b/research.Rmd
@@ -27,25 +27,36 @@ output:
 ---
     
 ## 2. [Supply Chain Disruptions: Evidence from the Bankruptcy of Hanjin Shipping (2021) ](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3293272)
-    
-### *Resubmitted* to **Manufacturing & Service Operations Management**
+   
+   
+### Under revision for submission. 
 
 ---
   
 ## 3. [Disclosure-Driven Social Engagement in Supply Chains (2021)](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3900182) with [Andrew Di Wu](https://sites.google.com/site/diandrewwu/).
-  
-### *Under Review* at **Manufacturing & Service Operations Management**
+
+### *Major Revision (1st Round)* at **MSOM**
 
 ### [Winner: POMS College of Sustainable Operations, Best Student Paper Competition](https://poms.org/colleges/csustops/)
 
 ---
-      
-## 4. The Retail Labor Productivity Paradox (2021) with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
 
-***
+## 4. The Value of Flexible Labor with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
+
+---
+
+
+## 5. Manager’s Labor Scheduling Decisions and Retail Store Store Performance with [Jorge Tamayo](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486) and [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
+
+---
+      
+
 
 # Cases and Teaching Material:
 
-1. [Getting Started in R Cloud Studio (2021)](https://www.hbs.edu/faculty/Pages/item.aspx?num=59552) with [Chiara Farronato](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=775022).
+## 1. [Getting Started in R Cloud Studio (2021)](https://www.hbs.edu/faculty/Pages/item.aspx?num=59552) with [Chiara Farronato](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=775022).
 
 ### **Harvard Business School Tutorial 621-708**, February 2021
+
+---
+
