--- a/research.Rmd
+++ b/research.Rmd
@@ -41,7 +41,7 @@ output:
 
 ---
 
-## 4. The Value of Flexible Labor with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
+## 4. The Costs and Benefits of Flexible Labor with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
 
 ---
 
