--- a/teaching.Rmd
+++ b/teaching.Rmd
@@ -19,7 +19,12 @@ output:
 
 <link rel="stylesheet" href="styles.css" type="text/css">
 
+```{r setup, include=FALSE} 
+knitr::opts_chunk$set(warning = FALSE, message = FALSE) 
+```
+
 ``` {r fig.align = "center", fig.cap = "Klarman Hall, Harvard Business School", echo=FALSE,  out.width = "50%"}
+
 knitr::include_graphics("C:/Users/caleb/Documents/GitHub/caleb-kwon.github.io/images/klarman.jpg")
 
 ```
