--- a/index.Rmd
+++ b/index.Rmd
@@ -8,9 +8,9 @@ output:
 
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(dpi=300,fig.width=7)
-```
+<!-- ```{r setup, include=FALSE} -->
+<!-- knitr::opts_chunk$set(dpi=320,fig.width=9) -->
+<!-- ``` -->
 
 <!-- <script> -->
 <!--    $(document).ready(function() { -->
@@ -29,48 +29,48 @@ knitr::opts_chunk$set(dpi=300,fig.width=7)
   gtag('config', 'UA-165847699-1');
 </script>
 
-```{r pic, echo = FALSE, dpi = 200, out.width = "45%"}
+```{r pic, echo = FALSE, dpi = 320, out.width = "40%"}
 #knitr::include_graphics("images/caleb_light.jfif")
 knitr::include_graphics("images/caleb_1.jpg")
 ```
 
 
 
-<div style="margin-bottom:25px;">
-</div>
+<!-- <div style="margin-bottom:25px;"> -->
+<!-- </div> -->
 
 <!-- <img src="images/caleb_light.jfif" height = "300" style ="display:block; margin-left: auto; margin-right:auto;"> -->
 
 
 
-<style type="text/css">
-    /* default styles here for older browsers. 
-       I tend to go for a 600px - 960px width max but using percentages
-    */
-    @media only screen and (min-width: 960px) {
-        /* styles for browsers larger than 960px; */
-    }
-    @media only screen and (min-width: 1440px) {
-        /* styles for browsers larger than 1440px; */
-    }
-    @media only screen and (min-width: 2000px) {
-        /* for sumo sized (mac) screens */
-    }
-    @media only screen and (max-device-width: 480px) {
-       /* styles for mobile browsers smaller than 480px; (iPhone) */
-    }
-    @media only screen and (device-width: 768px) {
-       /* default iPad screens */
-    }
-    /* different techniques for iPad screening */
-    @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) {
-      /* For portrait layouts only */
-    }
+<!-- <style type="text/css"> -->
+<!--     /* default styles here for older browsers.  -->
+<!--        I tend to go for a 600px - 960px width max but using percentages -->
+<!--     */ -->
+<!--     @media only screen and (min-width: 960px) { -->
+<!--         /* styles for browsers larger than 960px; */ -->
+<!--     } -->
+<!--     @media only screen and (min-width: 1440px) { -->
+<!--         /* styles for browsers larger than 1440px; */ -->
+<!--     } -->
+<!--     @media only screen and (min-width: 2000px) { -->
+<!--         /* for sumo sized (mac) screens */ -->
+<!--     } -->
+<!--     @media only screen and (max-device-width: 480px) { -->
+<!--        /* styles for mobile browsers smaller than 480px; (iPhone) */ -->
+<!--     } -->
+<!--     @media only screen and (device-width: 768px) { -->
+<!--        /* default iPad screens */ -->
+<!--     } -->
+<!--     /* different techniques for iPad screening */ -->
+<!--     @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) { -->
+<!--       /* For portrait layouts only */ -->
+<!--     } -->
 
-    @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape) {
-      /* For landscape layouts only */
-    }
-</style>
+<!--     @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape) { -->
+<!--       /* For landscape layouts only */ -->
+<!--     } -->
+<!-- </style> -->
 
 
 ***
