--- a/index.Rmd
+++ b/index.Rmd
@@ -83,9 +83,13 @@ output:
 
 # Caleb Kwon 
 
-I'm a 3rd year PhD Candidate in Operations Management at Harvard University. 
+I'm a 4th year PhD Candidate in Operations Management at Harvard University. I am very fortunate to be advised by Professor [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
 
-My dissertation explores the associations between managerial talent, labor scheduling decisions, and firm performance. Please see the [Research](https://calebkwon.com/research.html) tab for my papers. My dissertation committee consists of Professors [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534) (Chairperson), [Antonio Moreno](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1029325), and [Jorge Tamayo](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486).  
+My dissertation explores the associations between managerial talent, labor scheduling decisions, and firm performance. My research leverages "big data" obtained from various retailers and tech companies to analyze the effects of micro-level decisions made by managers on store outcomes. Please see the [Research](https://calebkwon.com/research.html) tab for my papers.
+
+In addition to my research, I have been involved in various teaching assignments during my PhD. At Harvard, I have served as a teaching fellow in the full-time MBA program at HBS, and was an executive coach in the [Program For Leadership Development](https://www.exed.hbs.edu/leadership-development/) Executive Education program. Additionally, I served as a teaching fellow in the Executive Education Program at the University of Chicago Booth School of Business (London and Hong Kong).
+
+<!-- Please see the [Research](https://calebkwon.com/research.html) tab for my papers. My dissertation committee consists of Professors [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534) (Chairperson), [Antonio Moreno](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1029325), and [Jorge Tamayo](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486).   -->
 
 Prior to Harvard, I received a B.A. in Economics from Simon Fraser University, and an M.A in Economics from Northwestern University. 
 
