--- a/research.Rmd
+++ b/research.Rmd
@@ -41,12 +41,19 @@ output:
 
 ---
 
-## 4. The Costs and Benefits of Flexible Labor with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
+## 4. [Lateness and Absenteeism in Retail Stores](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4189723) with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
+
+### Submitted. 
 
 ---
 
 
-## 5. Manager’s Labor Scheduling Decisions and Retail Store Store Performance with [Jorge Tamayo](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486) and [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
+## 5. Human-Computer Interactions in Labor Scheduling Decisions with [Jorge Tamayo](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486) and [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
+
+---
+
+
+## 6. Manager Performance and Labor Scheduling Practices with [Jorge Tamayo](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486) and [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
 
 ---
       
