--- a/research.Rmd
+++ b/research.Rmd
@@ -29,7 +29,7 @@ output:
 ## 2. [Supply Chain Disruptions: Evidence from the Bankruptcy of Hanjin Shipping (2021) ](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3293272)
    
    
-### Under revision for submission. 
+### Under revision.
 
 ---
   
