--- a/research.Rmd
+++ b/research.Rmd
@@ -41,7 +41,7 @@ output:
 
 ---
 
-## 4. [Lateness and Absenteeism in Retail Stores](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4189723) with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
+## 4. [The Effect of Employee Lateness and Absenteeism on Store Performance](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4189723) with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
 
 ### Submitted. 
 
