--- a/index.Rmd
+++ b/index.Rmd
@@ -76,8 +76,8 @@ output:
 <!--     } -->
 <!-- </style> -->
 
-<img src="images/caleb_1.jpg" alt="Nature" class="responsive" width = 400>
-
+<!-- <img src="images/caleb_1.jpg" alt="Nature" class="responsive" width = 400> -->
+<img src="images/caleb_pic_new.png" alt="Nature" class="responsive" width = 400>
 
 ***
 
