--- a/research.Rmd
+++ b/research.Rmd
@@ -25,7 +25,6 @@ output:
 
 ### **Annals of Statistics** (August, 2021)
 
-##### Summary: We provide a novel estimator for the number of mixture components in nonparametric finite mixture models. 
 
 ---
     
@@ -34,7 +33,6 @@ output:
    
 ### Under revision for re-submission.
 
-##### Summary: I show that supply chain disruptions can cause large increases to firms' inventory holdings. 
 
 ---
   
@@ -53,16 +51,16 @@ output:
 ---
 
 
-## 5. Human-Computer Interactions in Labor Scheduling Decisions with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534) and [Jorge Tamayo](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486)
+## 5. [Human-Computer Interactions in Demand Forecasting and Labor Scheduling Decisions](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4296344) with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534) and [Jorge Tamayo](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=1063486)
 
 
-### Submitted (Please Email for Draft) 
+### Submitted 
 
 ---
 
-## 6. The Effects of Fair Workweek Laws on Store Performance: Evidence from Chicago [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
+## 6. The Effects of Fair Workweek Laws on Store Performance: Evidence from Chicago with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
 
-### Submitted (Please Email for Draft) 
+### Please Email for Draft
 
 ---
 
@@ -74,9 +72,9 @@ output:
 
 ---
 
-## 9. On the Interactions Between the Minimum Wage and Fair Workweek Laws  [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
+<!-- ## 9. On the Interactions Between the Minimum Wage and Fair Workweek Laws  [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534). -->
 
----
+<!-- --- -->
 
 
       
