--- a/research.Rmd
+++ b/research.Rmd
@@ -58,9 +58,9 @@ output:
 
 ---
 
-## 6. The Effects of Fair Workweek Laws on Store Performance: Evidence from Chicago with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
+## 6. [The Effects of Fair Workweek Laws on Store Performance: Evidence from Chicago](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4351186) with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
 
-### Please Email for Draft
+### Submitted
 
 ---
 
