--- a/research.Rmd
+++ b/research.Rmd
@@ -81,6 +81,12 @@ output:
 
 <!-- --- -->
 
+## 8. Understanding the Effects of Fair Workweek Laws on Worker Schedules and Employment with [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
+
+### Submitted. 
+
+---
+
 
       
 
