--- a/index.Rmd
+++ b/index.Rmd
@@ -83,11 +83,13 @@ output:
 
 # Caleb Kwon 
 
-I'm a 4th year PhD Candidate in Operations Management at Harvard University. I am advised by Professor [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
+I'm a 5th year PhD Candidate in Operations Management at Harvard University. I am advised by Professor [Ananth Raman](https://www.hbs.edu/faculty/Pages/profile.aspx?facId=6534).
 
-My research investigates the connections between managerial talent, labor scheduling decisions, automation, and firm performance. For more details on my papers, please visit the [Research Section](https://calebkwon.com/research.html) of my website. As part of my research endeavors, I also work as a consultant for a major technology company that creates and offers algorithmic solutions to firms across various industries. 
+**I am on the 2023-2024 Job Market.**
 
-During my PhD, I have actively participated in multiple teaching roles. At Harvard, I have been a teaching fellow in the full-time MBA program at HBS and acted as an executive coach in the [Program For Leadership Development Executive Education program](https://www.exed.hbs.edu/leadership-development/). I have also served as a teaching fellow in the Executive Education Program at the Booth School of Business (London and Hong Kong) at the University of Chicago. Additionally, I am an MBA course instructor at Boston College Carroll School of Management, where I teach data science and coding for business.
+My research investigates the connections between managerial talent, labor scheduling decisions, automation, and firm performance. For more details on my papers, please visit the [Research Section](https://calebkwon.com/research.html) of my website. As part of my research, I also work as a consultant for a major technology company that creates and offers algorithmic solutions to firms across various industries. 
+
+During my PhD, I have participated in multiple teaching roles. At Harvard, I have been a teaching fellow in the full-time MBA program at HBS and acted as an executive coach in the [Program For Leadership Development Executive Education program](https://www.exed.hbs.edu/leadership-development/). I have also served as a teaching fellow in the Executive Education Program at the Booth School of Business (London and Hong Kong) at the University of Chicago. Additionally, I am an MBA course instructor at Boston College Carroll School of Management, where I teach data science and coding for business.
 
 Prior to Harvard, I received a B.A. in Economics from Simon Fraser University, and an M.A in Economics from Northwestern University. 
 
