--- a/CV.Rmd
+++ b/CV.Rmd
@@ -20,7 +20,7 @@ output:
 
 # Curriculum Vitae
 
-[PDF Version](https://www.dropbox.com/s/34rby97o4o7gqw3/res4.pdf?raw=1)
+[PDF Version](https://www.dropbox.com/scl/fi/hkkf2rwsrvhhq3vr7kgjz/res4.pdf)
 
 # Personal Information
 
