--- a/CV.Rmd
+++ b/CV.Rmd
@@ -20,7 +20,7 @@ output:
 
 # Curriculum Vitae
 
-[PDF Version](https://www.dropbox.com/scl/fi/hkkf2rwsrvhhq3vr7kgjz/res4.pdf)
+[PDF Version](https://www.dropbox.com/scl/fi/hkkf2rwsrvhhq3vr7kgjz/res4.pdf?rlkey=xe9hwrj3wx13peqimdpjarf88&raw=1)
 
 # Personal Information
 
